PROD-3402: fix scroll jump in chrome

--- a/src/components/chat/Chat.scss
+++ b/src/components/chat/Chat.scss
@@ -1136,6 +1136,11 @@
   overflow-y: hidden;
 }
 
+.lock-scroll-chrome {
+  overflow-y: hidden;
+  padding-right: 3px;
+}
+
 .inputer {
   max-height: 70%;
   position: relative;
